<resources>
    <string name="app_name">BonusRunningBeforeYou</string>
    <string name="btSubmit">START</string>
    <string name="textSubmit">跑步</string>
    <string name="tsStart">START</string>
    <string name="textUser">會員</string>
    <string name="textTarget">目標</string>
    <string name="textFriendShip">社交</string>
    <string name="textShop">商城</string>
    <string name="SHOP">點數商城</string>
    <string name="couponid">CouponId</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="details">商品詳情</string>
    <string name="timeStart"> </string>
    <string name="kiloRunning">0.0 km</string>


    <string name="textEmail">請輸入帳號</string>
    <string name="textPassword">請輸入密碼</string>
    <string name="textLogin">登入</string>
    <string name="textRegister">我要註冊</string>
    <string name="textForgetPassword">忘記密碼</string>
    <string name="textFBLogin">Facebook登入</string>
    <string name="textLoginTitle">用戶登入</string>
    <string name="error_incorrect_password">密碼錯誤，請重新輸入！！！</string>
    <string name="error_invalid_email">錯誤的帳號格式</string>
    <string name="error_field_required">請填入帳號</string>
    <string name="error_invalid_password">無效的密碼</string>
    <string name="tab_myPoint">點數中心</string>
    <string name="tab_myCoupon">我的優惠券</string>
    <string name="tab_myProfile">修改個人資料</string>
    <string name="textMembercenter">會員中心</string>
    <string name="textLogout">登出</string>
    <string name="textRegisterTitle">註冊</string>
    <string name="textConfirmPassword">請再次確認密碼</string>
    <string name="textSetPassword">請設定密碼</string>
    <string name="textSetEmail">請輸入帳號(Email)</string>
    <string name="textSendOut">送出</string>
    <string name="textSendEmail">送出後，系統會將密碼寄送到您的e-mail信箱</string>

    <string name="pause_running">確定結束運動嗎?</string>
    <string name="sure">確定</string>
    <string name="cancel">取消</string>

    <string name="social">社交</string>
    <string name="game_detail">八月份距離競賽</string>
    <string name="buttonJoinGame">加入</string>
    <string name="dailogText">確定</string>
    <string name="TARGET">目標挑戰</string>
    <string name="dareid">DareId</string>
    <string name="timeid">TimeId</string>
    <string name="km_one">Km_one</string>
    <string name="slash">/</string>
    <string name="km_two">Km_two</string>
    <string name="km_three">KM</string>
    <string name="targetbonus">點數獎勵</string>
    <string name="target_km">目標里程</string>
    <string name="targetbonus1">targetbonus1</string>
    <string name="targetkm1">targetkm1</string>
    <string name="targetbonus2">targetbonus2</string>
    <string name="targetkm2">targetkm2</string>
    <string name="targetbonus3">targetbonus3</string>
    <string name="targetkm3">targetkm3</string>
</resources>
