<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:padding="6dp"
    app:cardBackgroundColor="@color/colorLightBlue"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_target_dare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dareid"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_target_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/timeid"
            android:textSize="15dp"
            android:textColor="@color/colorRed"/>

        <TextView
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="@string/km_one"
            android:layout_below="@+id/tv_target_dare"
            android:id="@+id/tv_target_km_one"
            android:textColor="@color/colorBlue"
            android:gravity="center"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/slash"
            android:textSize="30dp"
            android:layout_toRightOf="@+id/tv_target_km_one"
            android:layout_below="@+id/tv_target_dare"
            android:id="@+id/slash"/>

        <TextView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_target_dare"
            android:layout_toRightOf="@+id/slash"
            android:text="@string/km_two"
            android:gravity="bottom"
            android:textSize="20dp"
            android:id="@+id/tv_target_km_two"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/tv_target_dare"
            android:layout_marginLeft="200dp"
            android:gravity="bottom"
            android:text="@string/km_three"
            android:textSize="20dp"/>

        <ImageView
            android:id="@+id/target_ellipse_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ellipse2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="12dp"
            android:text="@string/targetbonus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="113dp"
            android:layout_marginLeft="12dp"
            android:text="@string/target_km"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:layout_marginTop="106dp"
            android:layout_toRightOf="@+id/target_ellipse_1"
            android:id="@+id/target_line_1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse"
            android:layout_marginTop="100dp"
            android:layout_toRightOf="@+id/target_line_1"
            android:id="@+id/target_ellipse_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="182dp"
            android:text="@string/targetbonus1"
            android:layout_marginTop="80dp"
            android:id="@+id/target_bonus_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="182dp"
            android:layout_below="@+id/target_ellipse_2"
            android:text="@string/targetkm1"
            android:id="@+id/target_km1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line2"
            android:layout_marginTop="106dp"
            android:id="@+id/target_line_2"
            android:layout_toRightOf="@+id/target_ellipse_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse"
            android:layout_marginTop="100dp"
            android:layout_toRightOf="@+id/target_line_2"
            android:id="@+id/target_ellipse_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="244dp"
            android:text="@string/targetbonus2"
            android:layout_marginTop="80dp"
            android:id="@+id/target_bonus_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="244dp"
            android:layout_below="@+id/target_ellipse_3"
            android:text="@string/targetkm2"
            android:id="@+id/target_km2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line2"
            android:layout_toRightOf="@+id/target_ellipse_3"
            android:layout_marginTop="106dp"
            android:id="@+id/target_line_3"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse"
            android:layout_marginTop="100dp"
            android:layout_toRightOf="@+id/target_line_3"
            android:id="@+id/target_ellipse_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="306dp"
            android:text="@string/targetbonus3"
            android:layout_marginTop="80dp"
            android:id="@+id/target_bonus_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="306dp"
            android:layout_below="@+id/target_ellipse_4"
            android:text="@string/targetkm3"
            android:id="@+id/target_km3" />

    </RelativeLayout>

</android.support.v7.widget.CardView>