<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRelated.ForgetActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/forget_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/textForgetPassword"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_Title"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/forget_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/forget_toolbar"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textSendEmail"
            android:textColor="@color/colorRed"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSendEmail"
            android:layout_marginTop="10dp"
            android:hint="@string/textSetEmail"
            android:inputType="textEmailAddress"
            android:lines="1" />

        <Button
            android:id="@+id/btSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etSendEmail"
            android:layout_marginTop="30dp"
            android:background="@color/colorBlue"
            android:text="@string/textSendOut"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>