<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRelated.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/textRegisterTitle"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_Title"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/register_toolbar"
        android:padding="16dp">


        <EditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textSetEmail"
            android:inputType="textEmailAddress"
            android:lines="1" />


        <EditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterEmail"
            android:layout_marginTop="20dp"
            android:hint="@string/textSetPassword"
            android:inputType="textPassword"
            android:lines="1" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegisterPassword"
            android:hint="@string/textConfirmPassword"
            android:inputType="textPassword"
            android:lines="1" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:background="@color/colorBlue"
            android:layout_marginTop="30dp"
            android:text="@string/textRegisterTitle"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>
